remove dependency to api.Accounts in Storager [closes #15]
